--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- o la última disponible -->
+		</dependency>
 	</dependencies>
 
 	<build>
