--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -58,7 +63,6 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.7.3</version> <!-- o la última disponible -->
 		</dependency>
-
 
 	</dependencies>
 
