--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<version>42.7.3</version> <!-- o la última disponible -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
