--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
 spring.application.name=ThePetVerse
-server.port=8085
 
-spring.datasource.url=jdbc:mysql://localhost:3306/thepetverse_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.datasource.url=jdbc:postgresql://ep-cold-heart-a62s24bf-pooler.us-west-2.aws.neon.tech/the_pet_verse_db?sslmode=require
 spring.datasource.username=the_pet_verse_db_owner
@@ -12,5 +8,13 @@ spring.datasource.password=npg_fX7YoqDiSLz2
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.jpa.hibernate.ddl-auto=update
+
