--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,14 @@ spring.application.name=ThePetVerse
 #spring.datasource.username=root
 #spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.url=jdbc:postgresql://ep-cold-heart-a62s24bf-pooler.us-west-2.aws.neon.tech/the_pet_verse_db?sslmode=require
 spring.datasource.username=the_pet_verse_db_owner
 spring.datasource.password=npg_fX7YoqDiSLz2
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
